--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -1,7 +1,2 @@
-$color-white: #ffffff;
-
-$color-main-outer-background: #2b4255;
-$color-main-inner-background: #2b4255;
-$color-main-button: #e3e7f1;
-
-$color-header-gradient: #e3e7f1;
+$color-main-blue: #2b4255;
+$color-main-white: #e3e7f1;
