--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -24,91 +24,91 @@
   font-size: 14px;
 }
 .fs--05rem {
-  font-size: 0.5rem !important;
+  font-size: 0.5rem;
 }
 .fs--06rem {
-  font-size: 0.6rem !important;
+  font-size: 0.6rem;
 }
 .fs--07rem {
-  font-size: 0.7rem !important;
+  font-size: 0.7rem;
 }
 .fs--08rem {
-  font-size: 0.8rem !important;
+  font-size: 0.8rem;
 }
 .fs--09rem {
-  font-size: 0.9rem !important;
+  font-size: 0.9rem;
 }
 .fs--10rem {
-  font-size: 1rem !important;
+  font-size: 1rem;
 }
 .fs--11rem {
-  font-size: 1.1rem !important;
+  font-size: 1.1rem;
 }
 .fs--12rem {
-  font-size: 1.2rem !important;
+  font-size: 1.2rem;
 }
 .fs--13rem {
-  font-size: 1.3rem !important;
+  font-size: 1.3rem;
 }
 .fs--14rem {
-  font-size: 1.4rem !important;
+  font-size: 1.4rem;
 }
 .fs--15rem {
-  font-size: 1.5rem !important;
+  font-size: 1.5rem;
 }
 .fs--16rem {
-  font-size: 1.6rem !important;
+  font-size: 1.6rem;
 }
 .fs--17rem {
-  font-size: 1.7rem !important;
+  font-size: 1.7rem;
 }
 .fs--18rem {
-  font-size: 1.8rem !important;
+  font-size: 1.8rem;
 }
 .fs--19rem {
-  font-size: 1.9rem !important;
+  font-size: 1.9rem;
 }
 .fs--2rem {
-  font-size: 2rem !important;
+  font-size: 2rem;
 }
 .fs--21rem {
-  font-size: 2.1rem !important;
+  font-size: 2.1rem;
 }
 .fs--22rem {
-  font-size: 2.2rem !important;
+  font-size: 2.2rem;
 }
 .fs--23rem {
-  font-size: 2.3rem !important;
+  font-size: 2.3rem;
 }
 .fs--24rem {
-  font-size: 2.4rem !important;
+  font-size: 2.4rem;
 }
 .fs--25rem {
-  font-size: 2.5rem !important;
+  font-size: 2.5rem;
 }
 .fs--26rem {
-  font-size: 2.6rem !important;
+  font-size: 2.6rem;
 }
 .fs--27rem {
-  font-size: 2.7rem !important;
+  font-size: 2.7rem;
 }
 .fs--28rem {
-  font-size: 2.8rem !important;
+  font-size: 2.8rem;
 }
 .fs--29rem {
-  font-size: 2.9rem !important;
+  font-size: 2.9rem;
 }
 .fs--3rem {
-  font-size: 3rem !important;
+  font-size: 3rem;
 }
 .fs--4rem {
-  font-size: 4rem !important;
+  font-size: 4rem;
 }
 .fs--45rem {
-  font-size: 4.5rem !important;
+  font-size: 4.5rem;
 }
 .fs--5rem {
-  font-size: 5rem !important;
+  font-size: 5rem;
 }
 .fsw--100 {
   font-weight: 100;
