--- a/src/views/navbar/Navbar.scss
+++ b/src/views/navbar/Navbar.scss
@@ -1,4 +1,4 @@
 @import '/src/styles/Colors.scss';
 .navbar{
-    background: linear-gradient(to right, white 85%, $color-header-gradient 100%);
+    background: linear-gradient(to right, white 85%, $color-main-white 100%);
 }
