--- a/src/views/blog/categories/Category.scss
+++ b/src/views/blog/categories/Category.scss
@@ -1,5 +1,9 @@
-@import '/src/styles/Colors.scss';
-.category-menu{
-    background-color: $color-main-blue;
-    min-height: calc(100vh - 100px);
+@import "/src/styles/Colors.scss";
+.category-menu {
+	background-color: $color-main-blue;
+	min-height: calc(100vh - 100px);
+}
+.categoryBtn:hover {
+	background-color: #e3e7f1 !important;
+	color: black !important;
 }
