--- a/src/views/right-side/category-list/CategoryList.scss
+++ b/src/views/right-side/category-list/CategoryList.scss
@@ -1,17 +1,17 @@
 @import "/src/styles/Colors.scss";
 .category-list{
     .single-category-list-item{
-        border-bottom: 2px solid $color-main-blue ; 
+        border-bottom: 1px solid $color-main-blue ; 
     }
     .category-name{
         color: $color-main-blue,
     }
     .edit-button{
         background-color: $color-main-blue;
-        border-radius: 30px;
+        width:100%
     }
     .delete-button{
         background-color: $color-main-red;
-        border-radius: 30px;
+        width:100%
     }
 }
