push before react-toastify install

--- a/src/views/left-side/category-menu/CategoryMenu.scss
+++ b/src/views/left-side/category-menu/CategoryMenu.scss
@@ -3,6 +3,14 @@
   background-color: $color-main-white !important;
   color: black !important;
 }
+.active-btn {
+  background-color: $color-main-white !important;
+  color: black !important;
+}
+.single-category-btn:hover {
+  background-color: $color-main-white !important;
+  color: black !important;
+}
 .category-options-btn {
   background-color: $color-main-white;
 }
