react-toastify implemented

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+//packages
+@import 'react-toastify/dist/ReactToastify.css';
+
+//custom css
 @import "./styles/Colors";
 @import "./styles/Fonts";
 @import "./styles/Main";
