category delete, now updates blog posts react-confirm-alert integrated

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 //packages
 @import 'react-toastify/dist/ReactToastify.css';
+@import 'react-confirm-alert/src/react-confirm-alert.css'; // Import css
 
 //custom css
 @import "./styles/Colors";
